# Shimazus_Guardian

./: .env  .gitignore  Cargo.toml  Procfile  README.md  Secrets.toml  main.sqlite  tables.sql
src/: event.rs  lib.rs  main.rs
src/app/: av.rs  ban.rs  help.rs  kick.rs  message.rs  mod.rs  mute.rs  ping.rs  unban.rs  unmute.rs  verify.rs  whois.rs
src/commands/: av.rs  ban.rs  help.rs  kick.rs  message.rs  mod.rs  mute.rs  ping.rs  unban.rs  unmute.rs  verify.rs  whois.rs
src/core/: log.rs  mod.rs
src/moderation/: cases.rs  log.rs  mod.rs
src/tickets/: close.rs  mod.rs  ticket.rs
