[package]
edition = "2021"
name = "grimgar"
version = "0.1.0"
description = "discord bot for grimgar"
license = "MIT"
repository = "https://github.com/Maou-Shimazu/grimgar"

[lib]

[dependencies]
anyhow = "1.0.65"
async-std = {version = "1.12.0", features = ["tokio1"]}
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "chrono", "collector", "http"]}
shuttle-secrets = "0.6.0"
shuttle-service = {version = "0.6.0", features = ["bot-serenity"]}
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "full"]}
tracing = "0.1.37"
